# lvgl

./: .gitignore  CMakeLists.txt  lv_conf.h
demos/hisi_demo/: main.cpp
demos/sstar_demo/: CMakeLists.txt  main.cpp
demos/vz_demo/: CMakeLists.txt  main.cpp
env_support/cmake/: custom.cmake
src/core/: lv_global.h
src/draw/: lv_draw_image.c  lv_draw_rect.h
src/draw/sw/: lv_draw_sw_utils.c
src/draw/sw/blend/neon/: lv_blend_neon.S  lv_blend_neon.h
src/drivers/display/fb/: lv_linux_fbdev.c  lv_linux_fbdev.h
src/libs/thorvg/: tvgLottieProperty.h
src/misc/: lv_anim.c  lv_utils.c  lv_utils.h
src/osal/: lv_pthread.c
src/stdlib/: lv_mem.c
